fix go top btn z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -522,6 +522,7 @@ img {
   position: fixed;
   bottom: 1.3rem;
   right: 1.3rem;
+  z-index: 99;
 }
 
 .go-top-btn:hover {
